--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <meta name="description" lang="en" content="Software engineer with a Bachelor's degree in Computer Science and over 2 years of industry experience. Possess strong problem-solving skills and the ability to generate innovative solutions. Collaborative team player, quick learner, and open to continuous improvement. Please refer to my resume for details."/>
   
-  <link rel="icon" type="image/png" href="/assets/img/617F7F.ico" />
+  <link rel="icon" type="image/png" href="assets/img/617F7F.ico" />
 
   <meta name="theme-color" content="#5540af" />
 
@@ -48,7 +48,7 @@
 
   <link
     crossorigin="anonymous"
-    href="/assets/styles/main.min.css"
+    href="assets/styles/main.min.css"
     media="screen"
     rel="stylesheet"
   />
@@ -202,7 +202,7 @@
       class="absolute top-0 right-0 mt-4 mr-4"
       @click="mobileMenu = false"
     >
-      <img src="/assets/img/icon-close.svg" class="h-10 w-auto" alt="" />
+      <img src="assets/img/icon-close.svg" class="h-10 w-auto" alt="" />
     </button>
 
     <ul class="mt-8 flex flex-col">
@@ -296,7 +296,7 @@
     <div class="flex flex-col items-center justify-center lg:flex-row">
       <div class="">
         <img
-          src="/assets/img/pp.png"
+          src="assets/img/pp.png"
           style="max-width: 100%; background-color: rgba(46,60,60,0.3); border-radius: 25%; height: 26rem;"
           class=""
           alt="author"
@@ -322,18 +322,18 @@
           <div
             class="flex items-center justify-center pt-5 pl-2 sm:justify-start sm:pt-0"
           >
-            <a href="/">
+            <a href="">
               <i
                 class="bx bxl-github text-2xl text-white hover:text-yellow"
               ></i>
             </a>
 
-            <a href="/" class="pl-4">
+            <a href="" class="pl-4">
               <i
                 class="bx bxl-linkedin text-2xl text-white hover:text-yellow"
               ></i>
             </a>
-            <a href="/" class="pl-4">
+            <a href="" class="pl-4">
               <i
                 class="bx bxl-instagram text-2xl text-white hover:text-yellow"
               ></i>
@@ -416,14 +416,14 @@
       <div class="mx-auto h-24 w-24 text-center xl:h-28 xl:w-28">
         <div class="hidden group-hover:block">
           <img
-            src="/assets/img/react.png"
+            src="assets/img/react.png"
             style="-webkit-filter: invert(100%); filter: invert(100%);"
             alt="development icon"
           />
         </div>
         <div class="block group-hover:hidden">
           <img
-            src="/assets/img/react.png"
+            src="assets/img/react.png"
             alt="development icon"
           />
         </div>
@@ -444,14 +444,14 @@
       <div class="mx-auto h-24 w-24 text-center xl:h-28 xl:w-28">
         <div class="hidden group-hover:block">
           <img
-            src="/assets/img/apiwhite.png"
+            src="assets/img/apiwhite.png"
             style="-webkit-filter: invert(100%); filter: invert(100%);"
             alt="content marketing icon"
           />
         </div>
         <div class="block group-hover:hidden">
           <img
-            src="/assets/img/apiwhite.png"
+            src="assets/img/apiwhite.png"
             alt="content marketing icon"
           />
         </div>
@@ -475,14 +475,14 @@
       <div class="mx-auto h-24 w-24 text-center xl:h-28 xl:w-28">
         <div class="hidden group-hover:block">
           <img
-            src="/assets/img/db.png"
+            src="assets/img/db.png"
             style="-webkit-filter: invert(100%); filter: invert(100%);"
             alt="Mobile Application icon"
           />
         </div>
         <div class="block group-hover:hidden">
           <img
-            src="/assets/img/db.png"
+            src="assets/img/db.png"
             alt="Mobile Application icon"
           />
         </div>
@@ -506,14 +506,14 @@
       <div class="mx-auto h-24 w-24 text-center xl:h-28 xl:w-28">
         <div class="hidden group-hover:block">
           <img
-            src="/assets/img/deployment.png"
+            src="assets/img/deployment.png"
             style="-webkit-filter: invert(100%); filter: invert(100%);"
             alt="Email Marketing icon"
           />
         </div>
         <div class="block group-hover:hidden">
           <img
-            src="/assets/img/deployment.png"
+            src="assets/img/deployment.png"
             alt="Email Marketing icon"
           />
         </div>
@@ -536,14 +536,14 @@
       <div class="mx-auto h-24 w-24 text-center xl:h-28 xl:w-28">
         <div class="hidden group-hover:block">
           <img
-            src="/assets/img/softsikll.png"
+            src="assets/img/softsikll.png"
             style="-webkit-filter: invert(100%); filter: invert(100%);"
             alt="Theme Design icon"
           />
         </div>
         <div class="block group-hover:hidden">
           <img
-            src="/assets/img/softsikll.png"
+            src="assets/img/softsikll.png"
             alt="Theme Design icon"
           />
         </div>
@@ -872,7 +872,7 @@ class="mx-auto transform group rounded px-8 py-12 shadow
         >
           <div>
             <img
-              src="/assets/img/icon-project.svg"
+              src="assetsimg/icon-project.svg"
               class="mx-auto h-12 w-auto md:h-20"
               alt="icon project"
             />
@@ -894,7 +894,7 @@ class="mx-auto transform group rounded px-8 py-12 shadow
         >
           <div>
             <img
-              src="/assets/img/icon-award.svg"
+              src="assets/img/icon-award.svg"
               class="mx-auto h-12 w-auto md:h-20"
               alt="icon award"
             />
@@ -930,7 +930,7 @@ class="mx-auto transform group rounded px-8 py-12 shadow
     <div
       class="mx-auto grid w-full grid-cols-1 gap-6 pt-12 sm:w-3/4 lg:w-full lg:grid-cols-3 xl:gap-10"
     >
-    <a href="/post.html" class="shadow">
+    <a href="post.html" class="shadow">
       <div
         style="background-image: url(/assets/img/banner.jpg)"
         class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72"
@@ -1041,6 +1041,6 @@ class="mx-auto transform group rounded px-8 py-12 shadow
     <p class="text-center font-body text-white md:text-left"></p>
 </div>
     </div>
-    <script src="/assets/js/main.js"></script>    
+    <script src="assets/js/main.js"></script>    
   </body>
 </html>
