--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 
       <div><div
   class="relative bg-cover bg-center bg-no-repeat py-8"
-  style="background-image: url(/assets/img/banner.jpg)"
+  style="background-image: url(assets/img/banner.jpg)"
 >
   <div
     class="absolute inset-0 z-20 bg-gradient-to-r from-hero-gradient-from to-hero-gradient-to bg-cover bg-center bg-no-repeat"
@@ -859,7 +859,7 @@ class="mx-auto transform group rounded px-8 py-12 shadow
 
 <div
   class="bg-cover bg-top bg-no-repeat pb-16 md:py-16 lg:py-24"
-  style="background-image: url(/assets/img/experience-figure.png)"
+  style="background-image: url(assets/img/experience-figure.png)"
   id="statistics"
 >
   <div class="container">
@@ -932,7 +932,7 @@ class="mx-auto transform group rounded px-8 py-12 shadow
     >
     <a href="post.html" class="shadow">
       <div
-        style="background-image: url(/assets/img/banner.jpg)"
+        style="background-image: url(assets/img/banner.jpg)"
         class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72"
       >
         <span
@@ -954,7 +954,7 @@ class="mx-auto transform group rounded px-8 py-12 shadow
     </a>
       <a class="shadow">
         <!-- <div
-          style="background-image: url(/assets/img/post-01.png)"
+          style="background-image: url(assets/img/post-01.png)"
           class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72"
         >
           <span
@@ -977,7 +977,7 @@ class="mx-auto transform group rounded px-8 py-12 shadow
      
       <a  class="shadow">
         <!-- <div
-          style="background-image: url(/assets/img/banner.jpg)"
+          style="background-image: url(assets/img/banner.jpg)"
           class="group relative h-72 bg-cover bg-center bg-no-repeat sm:h-84 lg:h-64 xl:h-72"
         >
           <span
