--- a/post.html
+++ b/post.html
@@ -31,7 +31,7 @@
     content="Bu kısa yazıda, anlaşılabilir ve ölçeklenebilir kod yapılarının temel prensipleri keşfedeceğiz."
   />
 
-  <link rel="icon" type="image/png" href="/assets/img/617F7F.ico" />
+  <link rel="icon" type="image/png" href="assets/img/617F7F.ico" />
 
   <meta name="theme-color" content="#5540af" />
 
@@ -63,7 +63,7 @@
 
   <link
     crossorigin="anonymous"
-    href="/assets/styles/main.min.css"
+    href="assets/styles/main.min.css"
     media="screen"
     rel="stylesheet"
   />
@@ -113,7 +113,7 @@
   <div class="container flex items-center justify-between">
     <div>
       <a href="/">
-        <img src="/assets/img/617F7F.png" style="height: auto; width: 4rem; border-radius: 25px;" class="" alt="logo image" />
+        <img src="assets/img/617F7F.png" style="height: auto; width: 4rem; border-radius: 25px;" class="" alt="logo image" />
       </a>
     </div>
     <div class="hidden lg:block">
@@ -244,7 +244,7 @@
       class="absolute top-0 right-0 mt-4 mr-4"
       @click="mobileMenu = false"
     >
-      <img src="/assets/img/icon-close.svg" class="h-10 w-auto" alt="" />
+      <img src="assets/img/icon-close.svg" class="h-10 w-auto" alt="" />
     </button>
 
     <ul class="mt-8 flex flex-col">
@@ -345,7 +345,7 @@
       <div class="flex items-center pt-5 md:pt-10">
         <div>
           <img
-            src="/assets/img/pp.png"
+            src="assets/img/pp.png"
             class="w-24 rounded-full border-4 border-grey-70 shadow"
             style="background-color: rgba(00, 44, 77, 0.5);"
             alt="author image"
@@ -431,7 +431,7 @@
 
     </div>
 
-    <script src="/assets/js/main.js"></script>
+    <script src="assets/js/main.js"></script>
 
     
   </body>
