--- a/index.html
+++ b/index.html
@@ -60,7 +60,15 @@
 
   <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
 
-  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QEKV5P8Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C8QEKV5P8Q');
+</script>
 </head>
 
 
@@ -629,7 +637,7 @@ class="mx-auto transform group rounded px-8 py-12 shadow
    transition-all hover:scale-105 md:mx-0"
 >
 <div class="bg-gray-100 text-gray-800 p-6">
-  <h2 class="text-2xl font-bold mb-2">Project: YDM</h2>
+  <h2 class="text-2xl font-bold mb-2">TEKNOFEST Rocket Compitition</h2>
   <p class="mb-4">This project is prepared for TEKNOFEST Rocket Competition with a team.</p>
   <h3 class="text-xl font-bold mb-2">Technologies Used:</h3>
   <ul class="list-disc list-inside mb-4">
@@ -717,7 +725,7 @@ class="mx-auto transform group rounded px-8 py-12 shadow
 
               <div class="pt-2">
                 <span class="block font-body text-black">
-                  I worked as a project manager in a student team that wanted to establish an initiative based on internet communication with PLC. I coded the ground computer in rocket competitions
+                  I worked as a project manager in a student team that wanted to establish an initiative based on internet communication with PLC. Also, I was tech lead on other projects we made.
                   </span
                 >
               </div>
