--- a/post.html
+++ b/post.html
@@ -87,7 +87,15 @@
   <script>
     hljs.highlightAll();
   </script>
-  
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QEKV5P8Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-C8QEKV5P8Q');
+</script>
 </head>
 
 
@@ -112,7 +120,7 @@
   <div class="w-full z-50 top-0 py-3 sm:py-5  bg-primary ">
   <div class="container flex items-center justify-between">
     <div>
-      <a href="/">
+      <a href="./">
         <img src="assets/img/617F7F.png" style="height: auto; width: 4rem; border-radius: 25px;" class="" alt="logo image" />
       </a>
     </div>
@@ -378,14 +386,14 @@
 </div>
 
     <div class="mt-10 flex justify-between border-t border-lila py-12">
-      <a href="index.html" class="flex items-center">
+      <a href="./" class="flex items-center">
         <i class="bx bx-left-arrow-alt text-2xl text-primary"></i>
         <span
           class="block pl-2 font-body text-lg font-bold uppercase text-primary md:pl-5"
           >Öncekİ</span
         >
       </a>
-      <a href="index.html" class="flex items-center">
+      <a href="./" class="flex items-center">
         <span
           class="block pr-2 font-body text-lg font-bold uppercase text-primary md:pr-5"
           >Sonrakİ</span
